removed the api in the client .env
/api was being called twice thus an error message

--- a/todo-fullstack/server/.env
+++ b/todo-fullstack/server/.env
@@ -1,2 +1,19 @@
-MAIL_USER=md.irfan0709@gmail.com
-MAIL_PASS=yrku yfjk nhyy qxvb
+# server/.env.sample
+
+# ───────── Server basics ─────────
+# Port the Express API listens on
+PORT=4000
+
+# dev / production / test
+NODE_ENV=development
+
+# Secret key for signing JWTs
+# (change this in your real .env)
+JWT_SECRET=local_dev_secret
+
+# URL of the frontend that is allowed to talk to this API
+# Local dev:
+FRONTEND_URL=http://localhost:5173
+
+# Production example (uncomment & change when deployed):
+# FRONTEND_URL=https://your-vercel-app-url.vercel.app
